add font succesfully

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pin coming Soom [Ricardo Collado]</title>
 </head>
 <body>
-    <main>
+    <main class="main-container">
         <div class="title container">
             <div class="image-title--container">
                 <img src="./assets/img/logo.svg" alt="PING">
@@ -18,6 +18,10 @@
         <div class="input-email--container">
             <input type="email">
             <p class="wrong-email--container inactive">Please Provide a valid email address</p>
+            <button class="primary-button">Notify Me</button>
+        </div>
+        <div class="dashboard-container">
+            <img src="" alt="dashboard">
         </div>
     </main>
 </body>
