create style for first container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="main-container">
-        <div class="title container">
+        <div class="title-container">
             <div class="image-title--container">
                 <img src="./assets/img/logo.svg" alt="PING">
             </div>
