--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <div class="image-title--container">
                 <img src="./assets/img/logo.svg" alt="PING">
             </div>
-            <p class="subtitle-container">We are launching<span> Soon!</span></p>
+            <p class="subtitle-container">We are launching<span> soon!</span></p>
             <p class="subscribe-paragraph">Subscribe and get notified</p>
         </div>
         <div class="input-email--container">
-            <input type="email">
+            <input type="email" placeholder="Your email address...">
             <p class="wrong-email--container inactive">Please Provide a valid email address</p>
             <button class="primary-button">Notify Me</button>
         </div>
